.local-manifest/ns-system/builder-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ns-builder

spec:
  replicas: 1
  revisionHistoryLimit: 0
  selector:
    matchLabels:
      app: ns-builder

  template:
    metadata:
      labels:
        app: ns-builder
    spec:
      enableServiceLinks: false
      automountServiceAccountToken: false

      volumes:
        - name: project
          hostPath:
            path: /work
        - name: ns-bin
          emptyDir: {}
        - name: socket
          emptyDir: {}

      containers:
        - name: buildpack
          image: paketobuildpacks/builder-jammy-full:latest
          imagePullPolicy: Always
          command:
            - /ns-bin/ns
            - buildpack-helper
          args:
            - --debug
            - --loglevel=trace
            - --config=/config.yaml
          volumeMounts:
            - name: ns-bin
              mountPath: /ns-bin
            - name: project
              subPath: .local-dev/config/ns.yaml
              mountPath: /config.yaml

        - name: buildkitd
          image: moby/buildkit:latest
          imagePullPolicy: Always
          args:
            - --addr
            - unix:///run/buildkit/buildkitd.sock
          readinessProbe:
            exec:
              command:
                - buildctl
                - debug
                - workers
            initialDelaySeconds: 5
            periodSeconds: 30
          livenessProbe:
            exec:
              command:
                - buildctl
                - debug
                - workers
            initialDelaySeconds: 5
            periodSeconds: 30
          securityContext:
            privileged: true
          volumeMounts:
            - name: socket
              mountPath: /run/buildkit
            - name: project
              subPath: .local-dev/buildkitd/buildkitd.toml
              mountPath: /etc/buildkit/buildkitd.toml

        - name: builder
          image: ghcr.io/traptitech/ns-builder:main
          imagePullPolicy: Never
          args:
            - --debug
            - --loglevel=debug
            - --config=/opt/config/ns.yaml
          volumeMounts:
            - name: socket
              mountPath: /run/buildkit
            - name: project
              subPath: .local-dev/config/ns.yaml
              mountPath: /config.yaml
            - name: project
              subPath: .local-dev/keys
              mountPath: /keys
