.local-manifest/ns-system/dashboard-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ns-dashboard

spec:
  replicas: 1
  revisionHistoryLimit: 0
  selector:
    matchLabels:
      app: ns-dashboard

  template:
    metadata:
      labels:
        app: ns-dashboard
    spec:
      enableServiceLinks: false
      automountServiceAccountToken: false

      containers:
        - name: ns-dashboard
          image: ghcr.io/traptitech/ns-dashboard:main
          imagePullPolicy: Never
          ports:
            - name: http
              containerPort: 80
