.local-manifest/ns-system/controller-ssh-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ns-controller-ssh

spec:
  type: ClusterIP
  selector:
    app: ns-controller
  ports:
    - name: ssh
      port: 2201
      targetPort: ssh
