.local-manifest/ns-system/dashboard-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ns-controller-ssh

spec:
  type: LoadBalancer
  selector:
    app: ns-controller
  ports:
    - name: ssh
      port: 2201
      targetPort: ssh
