.local-manifest/ns-system/gateway-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ns-gateway

spec:
  type: ClusterIP
  selector:
    app: ns-gateway
  ports:
    - name: http
      port: 80
      targetPort: http
