.local-manifest/ns-system/ingress-route.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: ns

spec:
  entryPoints:
    - web
    - websecure
  routes:
    - kind: Rule
      match: Host(`ns.local.trapti.tech`)
      middlewares:
        - name: ns-auth-dev
          namespace: db
      services:
        - namespace: ns-system
          kind: Service
          name: ns-dashboard
          port: 80
          scheme: http
          strategy: RoundRobin
          weight: 1
    - kind: Rule
      match: Host(`ns.local.trapti.tech`) && PathPrefix(`/api/webhook`)
      services:
        - namespace: ns-system
          kind: Service
          name: ns-controller
          port: webhook
          scheme: http
          strategy: RoundRobin
          weight: 1
    - kind: Rule
      match: Host(`ns.local.trapti.tech`) && PathPrefix(`/neoshowcase.protobuf.APIService`)
      middlewares:
        - name: ns-auth-dev
          namespace: db
      services:
        - namespace: ns-system
          kind: Service
          name: ns-gateway
          port: http
          scheme: h2c
          strategy: RoundRobin
          weight: 1
